# DirectXShaderCompiler

./: .gitignore  CMakeLists.txt  DXILCONV_macOS.md  build_dxilconv_macos.sh  compare_dxbc2dxil.sh  compare_dxbc2dxil_comprehensive.sh  unified_shader_test.sh
cmake/modules/: FindD3D12_CrossPlatform.cmake  FindD3D12_macOS.cmake
include/dxc/Support/: AdaptiveMap.h  Global.h  WinAdapter.h  WinIncludes.h
include/llvm/ADT/: DenseMap.h  ilist.h
lib/Bitcode/Reader/: BitcodeReader.cpp
lib/DxcSupport/: CMakeLists.txt  Global.cpp  Unicode.cpp
lib/IR/: LLVMContext.cpp  LegacyPassManager.cpp  Metadata.cpp  Value.cpp
lib/Support/: FoldingSet.cpp  raw_ostream.cpp
projects/: CMakeLists.txt
projects/dxilconv/: CMakeLists.txt  PORTING_GUIDE.md
projects/dxilconv/include/: D3D12TokenizedProgramFormat.hpp  DxbcConverter.h
projects/dxilconv/include/ShaderBinary/: ShaderBinary.h
projects/dxilconv/include/Support/: CComPtrCompat.h  DXIncludes.h  DXIncludes_CrossPlatform.h  DxbcSignatures.h  d3dblob.h  d3dcommon_minimal.h  oaidl.h  ocidl.h  ole2.h  rpc.h  rpcndr.h  winapifamily.h  windows.h
projects/dxilconv/lib/: CMakeLists.txt
projects/dxilconv/lib/DxbcConverter/: CMakeLists.txt  DxbcConverter.cpp  DxbcConverterImpl.h  DxbcUtil.h
projects/dxilconv/lib/DxilConvPasses/: CMakeLists.txt  InitializePasses.cpp
projects/dxilconv/lib/ShaderBinary/: CMakeLists.txt  ShaderBinary.cpp  ShaderBinaryIncludes.h
projects/dxilconv/lib/Support/: CMakeLists.txt  PlatformHelpers_macOS.cpp
projects/dxilconv/test/: run_full_tests.sh
projects/dxilconv/tools/dxbc2dxil/: CMakeLists.txt  dxbc2dxil.cpp  dxbc2dxil_unix.cpp
projects/dxilconv/tools/dxilconv/: CMakeLists.txt  dxilconv.cpp  dxilconv_unix.cpp  dxilconv_uuids.cpp
projects/dxilconv/unittests/: CMakeLists.txt  DxilConvTestFramework.cpp  DxilConvTestFramework.h  DxilConvTestsCrossPlatform.cpp  DxilConvTests_macOS.cpp  README_ARM64_TESTS.md  run_arm64_tests.sh
projects/dxilconv/unittests/test_data/arm64/: alignment_test.hlsl  endian_test.hlsl  large_buffer.hlsl  simple_vertex.hlsl  vector_ops.hlsl
projects/include/Tracing/: DxcRuntimeEtw.h
tools/clang/: CMakeLists.txt
tools/clang/lib/Frontend/Rewrite/: RewriteObjC.cpp
